--- a/simple-chat/src/index.html
+++ b/simple-chat/src/index.html
@@ -2,7 +2,8 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Send a message</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Messenger</title>
         <link href="index.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
