--- a/index.html
+++ b/index.html
@@ -4,34 +4,201 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Messenger</title>
-        <link href="index.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-        <script src="index.js"></script>
-    <link href="style.css" rel="stylesheet"></head>
+    <link href="index.style.css" rel="stylesheet"></head>
     <body>
         <div class="content">
             <div class="header">
-                <span class="material-icons">arrow_back</span>
-                <div class="account">
-                    <span class="material-icons account__avatar">account_circle</span>
-                    <div class="account__info">
-                        <div class="account__name open-sans">Дженнифер</div>
-                        <div class="account__last-time open-sans">была 2 часа назад</div>
+                <span class="material-icons">menu</span>
+                <div class="header__main ">Messenger</div>
+                <span class="material-icons header__right-icon">search</span>
+            </div>
+            <div class="chats">
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/1.jpg"/>
                     </div>
-                </div>
-                <span class="material-icons header__search">search</span>
-                <span class="material-icons header__more-vert">more_vert</span>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Привет</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/2.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/3.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/4.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/5.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/6.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/7.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/8.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/9.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/10.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/11.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
+                <a class="chat" href="./chat/chat.html">
+                    <div class="crop-container">
+                        <img class="chat__image profile-image" src="https://randomfox.ca/images/12.jpg"/>
+                    </div>
+                    <div class="chat__underline">
+                        <div class="chat__main">
+                            <div class="chat__name">Дженнифер Эшли</div>
+                            <div class="chat__text">Тестовое сообщение</div>
+                        </div>
+                        <div class="chat__side">
+                            <div class="chat__time">15:54</div>
+                            <span class="material-icons status">done_all</span>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="messages"></div>
-            <div class="form">
-                <form action="/">
-                    <input class="form__input" name="message-text" placeholder="Сообщение" type="text" autocomplete="off">
-                </form>
-                <span class="material-icons form__attachment">attachment</span>
-            </div>
+            <span class="material-icons float-button">edit</span>
         </div>
-    <script type="text/javascript" src="bundle.js"></script></body>
+    <script type="text/javascript" src="index.bundle.js"></script></body>
 </html>
