Add interlocutor's messages

--- a/simple-chat/src/index/index.html
+++ b/simple-chat/src/index/index.html
@@ -16,188 +16,7 @@
                 <div class="header__main ">Messenger</div>
                 <span class="material-icons header__right-icon">search</span>
             </div>
-            <div class="chats">
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/1.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Привет</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/2.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/3.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/4.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/5.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/6.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/7.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/8.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/9.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/10.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/11.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-                <a class="chat" href="./chat/chat.html">
-                    <div class="crop-container">
-                        <img class="chat__image profile-image" src="https://randomfox.ca/images/12.jpg"/>
-                    </div>
-                    <div class="chat__underline">
-                        <div class="chat__main">
-                            <div class="chat__name">Дженнифер Эшли</div>
-                            <div class="chat__text">Тестовое сообщение</div>
-                        </div>
-                        <div class="chat__side">
-                            <div class="chat__time">15:54</div>
-                            <span class="material-icons status">done_all</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <div class="chats"></div>
             <span class="material-icons float-button">edit</span>
         </div>
     </body>
