--- a/chat/chat.html
+++ b/chat/chat.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>Messenger</title>
         <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,13 +13,7 @@
         <div class="content">
             <div class="header">
                 <a href="../index.html"><span class="material-icons">arrow_back</span></a>
-                <div class="header__main account">
-                    <span class="material-icons account__avatar">account_circle</span>
-                    <div class="account__info">
-                        <div class="account__name open-sans">Дженнифер</div>
-                        <div class="account__last-time open-sans">была 2 часа назад</div>
-                    </div>
-                </div>
+                <div class="header__main account"></div>
                 <span class="material-icons">search</span>
                 <span class="material-icons header__right-icon">more_vert</span>
             </div>
